--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dependencies": {
         "boxen": "^7.0.2",
         "chalk": "^5.2.0",
-        "cli-table": "^0.3.11",
+        "cli-table3": "^0.6.3",
         "dotenv": "^16.0.3",
         "yargs": "^17.7.1"
     },
